# python_de_learners_data

./: .com.google.Chrome.GgrH8s  .gitignore  LICENSE  README.md
.devcontainer/: devcontainer.json
Solving_problem/GrokkingDS/: challenge_recorder.py  chapters.txt  code_implementation.json  code_recorder.py  errors_hints.json  graphs.py  grokking_linklist.py  grokkingapp.py  linkedlist.py  queue.py  rgrlinked.py  stack.py  test_rgrlinked.py
Solving_problem/Scripts/: applying_functions.py  applying_logic.py  build_table.py  complete_ds_data.json  data.txt  data_structure_dict.py  data_structure_list.py  datastructure_with_ai.py  from_scratch_functions.py  functional_rectangle.py  oo_problem_bp.py  procedural_rectangle.py  pytorch_methods.py  taking_input_api.py  taking_inputs_cli.py  taking_inputs_gui.py  walking_the_loops.py
code_script_notebooks/: printing_variable.py  tmux_conf_local.txt
code_script_notebooks/projects/exploring_click/: calculator.py  choices.py  comments_update.py  ls.py  master_calc.py  password_inputs.py  pyproject.toml  rectangles.py  requirements.txt  upper_greet.py  using_envvar.py
code_script_notebooks/projects/exploring_click/hello_click/: hello.py
code_script_notebooks/projects/exploring_click/samples/: hello_text.txt  realpython.md
debug_documentations/: debug_whisper.txt  readme.md
notes/: building_page.txt
presentations/: FineTuning.drawio  git_flow.tldr
resources/: T5P5_Recommendation_System.ipynb  cleanup_snap.sh  git-push-with-ssh.md  wpa_handshake_python.py  wpa_psk_gen.py
trial_env/: pyvenv.cfg
(+837 files in other folders)
