# pyproject.toml

[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hello"
version = "0.1.0"
description = "A CLI to just see the how click works."
authors = [{ name = "KayPython", email = "insighthacker21@gmail.com" }]
dependencies = [
    "click >= 8.1.3",
]

[project.scripts]
calc = "hello.hello:cli"